Fix spacing between title and nav links.

--- a/themes/greatermedia/assets/css/sass/components/_shows.scss
+++ b/themes/greatermedia/assets/css/sass/components/_shows.scss
@@ -313,9 +313,9 @@ category: Components - Shows
 
 		ul {
 			position: absolute;
-			bottom: $base-line-height * -2;
 			text-align: justify;
 			margin-left: -9px;
+			padding-top: 8px;
 			width: auto;
 		}
 	}
